--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -42,10 +42,17 @@ nav, .navbar {
 
 .search-dropdown .dropdown-menu {
     width: 100vw;
+    top: 68px !important;
     left: 0 !important;
     padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    transform: none !important;
+}
+
+.navbar .search-dropdown, 
+.navbar .mobile-agent-dropdown {
+    position: static !important;
 }
 
 .search-dropdown .btn-link,
@@ -67,8 +74,11 @@ nav, .navbar {
 
 .mobile-agent-dropdown .dropdown-menu {
     width: 100vw;
+    padding-left: 0;
+    padding-top: 0;
+    top: 68px !important;
     left: 0 !important;
-    padding: 10px;
+    transform: none !important;
 }
 
 /* ================= CAROUSEL ================= */
